[gd_scene load_steps=12 format=3 uid="uid://8vwxugps26b7"]

[ext_resource type="Script" path="res://game_client/match/player/field/player_field.gd" id="1_l8tbv"]
[ext_resource type="FontFile" uid="uid://dttdqnx855wtb" path="res://fonts/ShipporiAntique-Medium.otf" id="2_7b1gt"]

[sub_resource type="QuadMesh" id="QuadMesh_omqhk"]
size = Vector2(1, 1.5)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_iq1xn"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rvbv3"]
noise = SubResource("FastNoiseLite_iq1xn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkvqf"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.25098)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_q1ho8"]
font = ExtResource("2_7b1gt")
font_size = 18
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfou3"]
bg_color = Color(0, 0, 0, 0.752941)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_fvrkd"]
font = ExtResource("2_7b1gt")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dkbr4"]
font_size = 40
font_color = Color(0, 0.360784, 1, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_70d2k"]
font_size = 40
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="PlayerField" type="Node3D"]
script = ExtResource("1_l8tbv")

[node name="DeckPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9, -1.7, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="DeckPosition"]
mesh = SubResource("QuadMesh_omqhk")

[node name="CombatPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0.1)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="CombatPosition"]
mesh = SubResource("QuadMesh_omqhk")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="CombatPosition"]

[node name="PlayedPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.25, -0.1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayedPosition"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("QuadMesh_omqhk")

[node name="AvatarPosition" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -0.5)
texture = SubResource("NoiseTexture2D_rvbv3")
region_enabled = true
region_rect = Rect2(0, 0, 150, 300)

[node name="CardHolder" type="Node3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.0
offset_bottom = 79.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(120, 79)

[node name="LabelEnchant" type="Label" parent="CanvasLayer/Control/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
mouse_filter = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_fkvqf")
text = "次強化(力+1 打+2 防+1)
次強化(力+1 打+2 防+1)
次強化(力+1 打+2 防+1)
次強化(力+1 打+2 防+1)
次強化(力+1 打+2 防+1)
次強化(力+1 打+2 防+1)
次強化(力+1 打+2 防+1)"
label_settings = SubResource("LabelSettings_q1ho8")
vertical_alignment = 1
clip_text = true

[node name="LabelName" type="Label" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -43.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(120, 20)
theme_override_styles/normal = SubResource("StyleBoxFlat_tfou3")
text = "名前"
label_settings = SubResource("LabelSettings_fvrkd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainerDamage" type="HBoxContainer" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -30.0
offset_right = 208.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LabelBlock" type="Label" parent="CanvasLayer/Control/HBoxContainerDamage"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_dkbr4")
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelDamage" type="Label" parent="CanvasLayer/Control/HBoxContainerDamage"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_70d2k")
vertical_alignment = 1
